# refspy

./: .gitignore  .readthedocs.yaml  CHANGES.md  CREDITS.md  INTERNALS.md  LICENSE  Makefile  NOTEBOOK.ipynb  PUBLISH.md  README.md  TODO.md  demo.html  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
demo/: en_US.html  en_US.txt  fr_FR.html  fr_FR.txt
docs/: .buildinfo  index.html  refspy.html  search.js
docs/.doctrees/: environment.pickle  index.doctree
docs/refspy/: book.html  config.html  constants.html  context.html  format.html  formats.html  formatter.html  index.html  indexers.html  indexes.html  init.html  language.html  languages.html  libraries.html  library.html  logger.html  manager.html  matcher.html  models.html  navigator.html  number.html  range.html  reference.html  syntax.html  types.html  utils.html  verse.html
docs/refspy/formats/: en_US.html  fr_FR.html
docs/refspy/languages/: english.html  french.html
docs/refspy/libraries/: en_US.html  fr_FR.html
docs/refspy/models/: book.html  format.html  language.html  library.html  range.html  reference.html  syntax.html  verse.html
docs/refspy/syntax/: european.html  international.html
docs/refspy/types/: index.html  number.html
media/: refspy-logo.xcf
refspy/: __init__.py  book.py  config.py  constants.py  corpus.py  format.py  formatter.py  helper.py  index.py  indexers.py  indexes.py  init.py  language.py  library.py  logger.py  manager.py  matcher.py  navigator.py  range.py  reference.py  setup.py  utils.py  verse.py
refspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
refspy/docs/: context.py  demo.html  demo.py
refspy/formats/: en_US.py  fr_FR.py
refspy/languages/: english.py  french.py  spanish.py
refspy/libraries/: README.md  en_US.py  es_ES.py  fr_FR.py
refspy/models/: book.py  format.py  language.py  library.py  range.py  reference.py  symbols.py  syntax.py  verse.py
refspy/refspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
refspy/symbols/: european.py  international.py
refspy/syntax/: european.py  international.py
refspy/types/: format.py  library.py  number.py
tests/: context.py  data.py  test_debugging.py  test_en_US.py  test_es_ES.py  test_example.py  test_formatter.py  test_fr_FR.py  test_indexers.py  test_indexes.py  test_manager.py  test_matcher.py  test_navigator.py  test_options.py  test_range.py  test_reference.py  test_syntax.py  test_utils.py  test_verse.py
tests/types/: test_library.py
