[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "refspy"
version = "0.9.3"
authors = [
  { name="Nigel Chapman", email="nigel@chapman.id.au" },
]
description = "A Python package for working with biblical references in ordinary text."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Religion",
  "Topic :: Text Processing :: Indexing",
]


[tool.setuptools]
packages = ["refspy"]
py-modules=["refspy", 'refspy.Languages', 'refspy.libraries']


[project.urls]
Homepage = "https://github.com/eukras/refspy"
Issues = "https://github.com/eukras/refspy/issues"
