[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "refspy"
version = "0.10.3"
authors = [{ name = "Nigel Chapman", email = "nigel@chapman.id.au" }]
description = "A Python package for working with biblical references in human text."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic >=2.7.1"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Religion",
  "Topic :: Text Processing :: Indexing",
]

[metadata]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[tool.setuptools]
packages = ["refspy", 'refspy.languages', 'refspy.libraries']
py-modules = ["refspy", 'refspy.languages', 'refspy.libraries']
license-files = []


[project.urls]
Homepage = "https://github.com/eukras/refspy"
Issues = "https://github.com/eukras/refspy/issues"
